fix some code too long

--- a/src/components/backGround/backGround.css
+++ b/src/components/backGround/backGround.css
@@ -51,11 +51,11 @@
 @keyframes fall {
     0% {
         top: -200vh;
-        opacity: 1;
+        /* opacity: 1; */
     }
     100% {
         top: calc(130vh);
-        opacity: 0.2;
+        /* opacity: 0.2; */
     }
 }
 
